--- a/workspace/quiz-paesi/src/main/resources/templates/home.html
+++ b/workspace/quiz-paesi/src/main/resources/templates/home.html
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
-    <script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}"></script>
 
+<head>
+	<meta charset="ISO-8859-1">
+	<title>Insert title here</title>
+	<link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+	<script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}"></script>
+	<style type="text/css">
+		#bandiere img {width: 100px; height: 70px; border:1px solid #ccc;}
+	</style>
 </head>
+
 <body>
 
-<div class="container">
+	<div class="container">
 
-	<h1>Quiz paesi del mondo</h1>
-	<div class="row">
-		<a class="btn btn-primary" href="/quiz-capitali">Quiz capitali</a>
-		<a class="btn btn-primary" href="/quiz-bandiere">Quiz bandiere</a>
-		<a class="btn btn-primary" href="/training-capitali">Training capitali</a>
-		<a class="btn btn-primary" href="/training-bandiere">Training bandiere</a>
+		<h1>Quiz paesi del mondo</h1>
+		<div class="row" th:insert="menu.html :: menu">
+		</div>
+
+		<div class="row" id="bandiere"></div>
+
+		<script>
+
+			const URL = '/api/paesi/all'
+
+			fetch(URL)
+				.then(res => res.json())
+				.then(paesi => {
+					for (const paese of paesi) {
+						const IMG = document.createElement('img')
+						IMG.src = '/img/' + paese.alpha2Code + '.png'
+						IMG.setAttribute('class', 'img col-2')
+						document.getElementById('bandiere').append(IMG)
+
+					}
+				});
+
+		</script>
+
+
 	</div>
-
-</div>
 </body>
+
 </html>
