--- a/workspace/quiz-paesi/src/main/resources/templates/training-capitali.html
+++ b/workspace/quiz-paesi/src/main/resources/templates/training-capitali.html
@@ -11,35 +11,26 @@
 <body>
 
     <div class="container">
-        <div id="punteggio" class="row"></div>
+        <h1>Quiz paesi del mondo</h1>
+        <div class="row" th:insert="menu.html :: menu">
+        </div>
 
-        <div id="quiz" class="row">
-            <div>
-                <h1 class="domanda"></h1>
+        <div id="quiz" class="card" style="width: 18rem;margin:auto;">
+            
+            <div class="card-body">
+                <h5 class="card-title domanda">Card title</h5>
+                <h6 class="card-text" id="box1">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</h6>
+                <button class="btn btn-primary" id="play">Play</button>
+
             </div>
-            <div class="col-3">
-                <button class="btn btn-danger" id="box1"></button>
-            </div>
-            <div class="col-3">
-                <button class="btn btn-danger" id="box2"></button>
-            </div>
-            <div class="col-3">
-                <button class="btn btn-danger" id="box3"></button>
-            </div>
-            <h2 class="" id="risposta"></h2>
-            <button class="btn btn-primary" id="play">Play</button>
         </div>
     </div>
 
 
     <script>
 
-        const URL = '/api/paesi'
-        document.querySelector('#punteggio').textContent = 'Punteggio ' + sessionStorage.getItem('punteggio')
-
-        if (!sessionStorage.getItem('punteggio')) {
-            sessionStorage.setItem('punteggio', 0);
-        }
+        const URL = '/api/paese'
 
         document.getElementById('play').onclick = function () {
             location.reload();
@@ -51,54 +42,28 @@
 
                 let quiz = {
                     'domanda': '',
-                    'risposte': [],
                     'risposta': ''
                 }
 
-                document.getElementById('play').style = 'display:none'
+				const paese = paesi[0];
+				console.log(paese)
+                //document.getElementById('play').style = 'display:none'
 
-                for (const paese of paesi) {
-                    quiz.domanda = paese.nome
-                    quiz.risposte.push(paese.capitale)
-                }
-                quiz.risposta = quiz.risposte[2]
-                quiz.risposte.sort()
+                quiz.domanda = paese.nome
+                quiz.risposta = paese.capitale
+                
                 document.querySelector('.domanda').textContent = quiz.domanda
-                document.querySelector('#box1').textContent = quiz.risposte[0]
-                document.querySelector('#box2').textContent = quiz.risposte[1]
-                document.querySelector('#box3').textContent = quiz.risposte[2]
+                document.querySelector('#box1').textContent = quiz.risposta
 
 
-                document.querySelector('#box1').addEventListener('click',
-                    function () {
-                        if (this.textContent == quiz.risposta)
-                            vittoria(this.textContent)
-                    }
-                )
-                document.querySelector('#box2').addEventListener('click',
-                    function () {
-                        if (this.textContent == quiz.risposta)
-                            vittoria(this.textContent)
-                    }
-                )
-                document.querySelector('#box3').addEventListener('click',
-                    function () {
-                        if (this.textContent == quiz.risposta)
-                            vittoria(this.textContent)
-                    }
-                )
+
+
+
 
 
             })
 
-        function vittoria(testo) {
-            document.querySelector('#risposta').textContent = 'Hai risposto correttamente: ' + testo;
-            document.getElementById('play').style = 'display:visible'
-            let counter = sessionStorage.getItem('punteggio')
-            console.log(counter++)
-            sessionStorage.setItem('punteggio', counter)
 
-        }
 
 
     </script>
